fixed: build & task newMod & initial setup